--- a/docs/base/8.深拷贝和浅拷贝.md
+++ b/docs/base/8.深拷贝和浅拷贝.md
@@ -6,3 +6,5 @@
 
 #### 深拷贝
 > 将一个对象复制后，不论是基本数据类型还有引用类型，都是重新创建的。简单来说，就是深复制进行了完全彻底的复制，而浅复制不彻底。
+
+详见 [Java中的深拷贝和浅拷贝介绍](http://www.jb51.net/article/48201.htm)
